--- a/styles.css
+++ b/styles.css
@@ -135,9 +135,65 @@ background: radial-gradient(circle, rgba(242,166,243,1) 36%, rgba(215,226,143,1)
 }
 
 .event-container {
-    
+    margin-top: 100px;
+
 }
 
 .event-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 1200px;
+    flex-wrap: wrap;
+}
+
+.rsvp-container {
+    margin-top: 100px;
+}
+
+.rsvp-container form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 50px auto;
+    padding: 0 20px;
+    background-color: #eaeee141;
+    border-radius: 5%;
+}
+
+.rsvp-container form input {
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #bb3baa;
+    width: 300px;
+}
+
+.rsvp-container textarea {
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #bb3baa;
+    width: 300px;
+    height: 100px;
+}
+
+.rsvp-container form input[type="submit"] {
+    background-color: #bb3baa;
+    color: #faf9fa;
+    border: none;
+    width: 100px;
+    margin: 20px;
+}
+
+.rsvp-container form input[type="checkbox"]{
+    width: 20px;
+    height: 20px;
+    flex-flow: row;
+    
 
 }
+
